example/istio/destination-rule/internal-header-zyh-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: n1
spec:
  hosts:
  - "nginx"
  http:
  - match:
    - headers:
        user:
          exact: zyh
    fault:
      abort:
        percent: 50
        httpStatus: 500
    route:
    - destination:
        host: nginx
        subset: v2
  - route:
    - destination:
        host: nginx
        subset: v1
