example/istio/destination-rule/internal-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: n1
spec:
  hosts:
  - "nginx"
  http:
    - route:
      - destination:
          port:
            number: 80
          host: nginx
          subset: v2
        weight: 3
      - destination:
          port:
            number: 80
          host: nginx
          subset: v1
        weight: 97
